# codebridge

./: .gitignore  Ext background  Ext manifest  Ext popup  HTML  Manifest  Qr generator  README.md  Readme. MD  __init__.py  __main__.py  background  content  extension.py  popup  pyproject.toml  server.py  tools.py
codebridge/: server.py
extension/: content.js  popup.html
